--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "deploy": "next build && next export && gh-pages -d out -b master"
   },
   "dependencies": {
     "next": "latest",
@@ -15,6 +16,7 @@
     "@types/node": "^14.14.20",
     "@types/react": "^17.0.0",
     "autoprefixer": "10.0.2",
+    "gh-pages": "^3.1.0",
     "postcss": "8.1.7",
     "tailwindcss": "^2.0.2",
     "typescript": "^4.1.3"
