--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "deploy": "next build && next export && gh-pages -d out -b master"
+    "deploy": "next build && next export && touch out/.nojekyll && gh-pages -d out -b master"
   },
   "dependencies": {
     "next": "latest",
