--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@babel/core": "^7.13.14",
+    "@heroicons/react": "^1.0.0",
     "next": "latest",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
